files/deploy/files-service/files-service.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files
  namespace: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: files
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: files
    spec:
      volumes:
        - name: credentials
          secret:
            secretName: files-gcs-credentials
        - name: jwks
          secret:
            secretName: jwks
      containers:
        - name: files
          image: eu.gcr.io/the-mesh-254617/svc-files-service:dd3cdf4-1629797246352 # {"$imagepolicy": "flux-system:services-files"}
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - name: credentials
              mountPath: /secrets/
            - name: jwks
              mountPath: /jwks/
