files/deploy/files-service/files-service.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: files
  namespace: services
  labels:
    app: files
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: files
